# CoronaLogger

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
cmake/: CoronaLoggerConfig.cmake.in
docs/: api.md  usage.md
examples/: CMakeLists.txt  minimal.cpp
include/: corona_logger.h
src/: CMakeLists.txt
